Fix text overflow gradient color

--- a/src/app/words/words-collection/words-collection.component.less
+++ b/src/app/words/words-collection/words-collection.component.less
@@ -22,6 +22,9 @@ mw-words-collection {
             }
         }
     }
+    .ui-table-tbody tr:nth-child(even) .text-overflow:after {
+      background-image: linear-gradient(to right, transparent, #fafafb);
+    }
     .ui-table-summary {
         text-align: right;
         .total {
